<resources>
    <string name="app_name">Example4app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">这软件还不错,hhhhhhh</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="input_your_name">用户名</string>
    <string name="input_your_password">密码</string>
    <string name="person_login">登录</string>
    <string name="forget_password">找回密码</string>
    <string name="register">免费注册</string>
    <string name="title_home">论坛</string>
    <string name="title_dashboard">拍卖</string>
    <string name="title_notifications">失物认领</string>
</resources>
