<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eeeeee"
              android:fitsSystemWindows="true"
              android:orientation="vertical"> <!--头部内容-->
    <LinearLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/side_nav_bar"
        android:fitsSystemWindows="true"
        android:gravity="center">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:fitsSystemWindows="true"
            android:src="@mipmap/ic_launcher"
            />
    </LinearLayout> <!--输入框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#ffffff"
            android:hint="@string/input_your_name"
            android:textSize="19dp"/>
        />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:hint="@string/input_your_password"
            android:textSize="19dp"/>
        />
    </LinearLayout> <!--密码功能-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="60dp">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/side_nav_bar"
            android:onClick="bt_logIn"
            android:text="@string/person_login"
            android:textColor="#ffffff"
            android:textSize="19dp"/>

        <Button
            android:id="@+id/btn_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:gravity="start"
            android:text="@string/forget_password"
            android:textColor="#2999ce"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/login"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:gravity="end"
            android:text="@string/register"
            android:textColor="#2999ce"
            android:textSize="16dp"/>
    </RelativeLayout>
</LinearLayout>
